# loomis

./: .dockerignore  CMakeLists.txt  Dependencies.cmake  Dockerfile  README.md
config/: config.conf
src/: base.cpp  base.h  cron-scheduler.cpp  cron-scheduler.h  main.cpp  service-manager.cpp  service-manager.h  types.h  version.h
src/api/: api-base.cpp  api-base.h  api-emby-json-types.h  api-emby-types.h  api-emby.cpp  api-emby.h  api-jellystat-json-types.h  api-jellystat-types.h  api-jellystat.cpp  api-jellystat.h  api-manager.cpp  api-manager.h  api-plex-types.h  api-plex.cpp  api-plex.h  api-tautulli-json-types.h  api-tautulli-types.h  api-tautulli.cpp  api-tautulli.h  api-utils.h  json-helper.h
src/config-reader/: config-reader-types.h  config-reader.cpp  config-reader.h
src/logger/: ansii-formatter.cpp  ansii-formatter.h  ansii-remove-formatter.cpp  ansii-remove-formatter.h  log-apprise-sync.h  log-apprise.cpp  log-apprise.h  log-utils.h  logger-types.h  logger.cpp  logger.h
src/services/: service-base.cpp  service-base.h  service-utils.h
src/services/folder-cleanup/: folder-cleanup-service.cpp  folder-cleanup-service.h
src/services/playlist-sync/: playlist-sync-service.cpp  playlist-sync-service.h
src/services/test/: test-service.cpp  test-service.h
src/services/watch-state-sync/: emby-user.cpp  emby-user.h  plex-user.cpp  plex-user.h  watch-state-logger.h  watch-state-sync-service.cpp  watch-state-sync-service.h  watch-state-user.cpp  watch-state-user.h
